sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:5: error: not found: type boolean
	var hasSwap:boolean = false;
                    ^AlgCombSort:22: error: missing arguments for method || in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
 	}while( ecart >1 || hasSwap = false)
                         ^